--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.16.1"
+    "ejs": "^3.1.9",
+    "express": "^4.18.3",
+    "path": "^0.12.7"
   }
 }
